--- a/String2JSON.csproj
+++ b/String2JSON.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>H:\mhstring</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
 </Project>
